--- a/network_config.json
+++ b/network_config.json
@@ -40,5 +40,37 @@
       ["n7", "n9"],
       ["n8", "n10"],
       ["n11", "n13"]
-    ]
+    ],
+    "cache": {
+      "n1":{
+      },
+      "n2":{
+      },
+      "n3":{
+      },
+      "n4":{
+      },
+      "n5":{
+      },
+      "n6":{
+      },
+      "n7":{
+      },
+      "n8":{
+      },
+      "n9":{
+      },
+      "n10":{
+      },
+      "n11":{
+      },
+      "n12":{
+      },
+      "n13":{
+      },
+      "n14":{   
+      },
+      "n15":{
+      }
+    }
   }
